// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingChart is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiLoadingChart testClass1 testClass2 euiLoadingChart--medium"
  data-test-subj="test subject string"
>
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
</div>
`;

exports[`EuiLoadingChart mono is rendered 1`] = `
<div
  class="euiLoadingChart euiLoadingChart--mono euiLoadingChart--medium"
>
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
</div>
`;

exports[`EuiLoadingChart size l is rendered 1`] = `
<div
  class="euiLoadingChart euiLoadingChart--large"
>
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
</div>
`;

exports[`EuiLoadingChart size m is rendered 1`] = `
<div
  class="euiLoadingChart euiLoadingChart--medium"
>
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
</div>
`;

exports[`EuiLoadingChart size xl is rendered 1`] = `
<div
  class="euiLoadingChart euiLoadingChart--xLarge"
>
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
  <div
    class="euiLoadingChart__bar"
  />
</div>
`;
